@@ -505,6 +505,10 @@ public class XmlTest implements Cloneable {
     return m_index;
   }
 
+  public void setIndex(int index) {
+    m_index = index;
+  }
+
   @Override
   public int hashCode() {
     final int prime = 31;
