@@ -1,4 +1,5 @@
 Current
+Fixed: GITHUB-2857: XmlTest index is not set for test suites invoked with YAML
 
 7.7.1
 Fixed: GITHUB-2854: overloaded assertEquals methods do not work from Groovy (Krishnan Mahadevan)
